# sc-controller

./: .dockerignore  .gitignore  .kateconfig  ADDITIONAL-LICENSES  AppImageBuilder.debian-bullseye.yml  AppImageBuilder.debian.yml  AppImageBuilder.test.Dockerfile  AppImageBuilder.ubuntu-focal.yml  AppImageBuilder.yml  Dockerfile  README.md  appimage-build.sh  daemon.sh  gamecontrollerdb.txt  generate-icons.py  generate_icons.py  generate_svg.py  pyproject.toml  requirements.txt  requirements_dev.txt  ruff.toml  run.sh  setup.py
.github/workflows/: Appimage.yml  appimage.yml  scc-linux.yml
default_profiles/: Desktop.sccprofile  XBox Controller.sccprofile
glade/: about.glade  action_editor.glade  app.glade  controller_settings.glade  creg.glade  global_settings.glade  icon_chooser.glade  import_export.glade  key_grabber.glade  macro_editor.glade  menu_editor.glade  modeshift_editor.glade  osk_binding_editor.glade  ring_editor.glade  simple_chooser.glade
glade/ae/: axis.glade  axis_action.glade  buttons.glade  custom.glade  dpad.glade  first_page.glade  gesture.glade  gyro.glade  gyro_action.glade  menu_only.glade  osk_action.glade  per_axis.glade  recent_list.glade  special_action.glade  tilt.glade  trigger.glade
scc/: __init__.py  actions.py  aliases.py  cemuhook_server.c  cemuhook_server.py  cheader.py  config.py  constants.py  controller.py  device_monitor.py  macros.py  mapper.py  menu_data.py  modifiers.py  parser.py  paths.py  profile.py  sccdaemon.py  scheduler.py  scripts.py  special_actions.py  tools.py  uinput.c  uinput.py
scc/drivers/: ds4drv.py  ds5drv.py  evdevdrv.py  fake.py  hiddrv.c  hiddrv.py  remotepad_controller.c  sc_by_bt.c  sc_by_bt.py  sc_by_cable.py  sc_dongle.py  steamdeck.py  usb.py
scc/foreign/: vdf.py
scc/gui/: __init__.py  aboutdialog.py  action_editor.py  app.py  area_to_action.py  binding_editor.py  chooser.py  controller_image.py  controller_settings.py  controller_widget.py  daemon_manager.py  dwsnc.py  editor.py  gdk_to_key.py  gestures.py  global_settings.py  icon_chooser.py  key_grabber.py  keycode_to_key.py  macro_editor.py  menu_editor.py  modeshift_editor.py  osd_mode.py  osk_binding_editor.py  parser.py  profile_switcher.py  ribar.py  ring_editor.py  simple_chooser.py  statusicon.py  svg_widget.py  userdata_manager.py
scc/lib/: __init__.py  daemon.py  eudevmonitor.py  hidparse.py  hidparse_data.py  hidraw.py  ioctl_opt.py  jsonencoder.py  libusb1.py  usb1.py  vdf.py  xinput.py  xwrappers.py
scc/osd/: __init__.py  area.py  binding_display.py  dialog.py  gesture_display.py  grid_menu.py  hmenu.py  inputdisplay.py  keyboard.py  launcher.py  menu.py  menu_generators.py  message.py  osk_actions.py  quick_menu.py  radial_menu.py  (+2 more)
scripts/: appimage-AppRun.sh  sc-controller  sc-controller.appdata.xml  scc-daemon  scc-osd-dialog  scc-osd-menu  scc-osd-message  scc-osd-radial-menu
tests/: README.md  test_compress.py  test_docs.py  test_inputs.py  test_setup.py  test_vdf.py
(+35 files in other folders)
