# TODO add requirements.txt https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
# but it is BETA

# TODO migrate files from setup.py - https://setuptools.pypa.io/en/latest/userguide/miscellaneous.html

[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sccontroller"
dynamic = ["version"]
description = "User-mode driver, mapper and GTK3 based GUI for Steam Controller, DS4 and similar controllers."
authors = [{name = "C0rn3j", email = "martin@rys.rs"}]
license = {text = "GPL-2.0-only"}
keywords = ["controller", "mapping", "tools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: POSIX :: Linux"
]
requires-python = ">=3.8"
#platforms = ["Linux"]

# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#creating-executable-scripts
[project.gui-scripts]
sc-controller         = "scc.bin.sc_controller:main"

[project.scripts]
scc-daemon            = "scc.bin.scc_daemon:main"
scc                   = "scc.bin.scc:main"
scc-osd-dialog        = "scc.bin.scc_osd_dialog:main"
scc-osd-keyboard      = "scc.bin.scc_osd_keyboard:main"
scc-osd-launcher      = "scc.bin.scc_osd_launcher:main"
scc-osd-menu          = "scc.bin.scc_osd_menu:main"
scc-osd-message       = "scc.bin.scc_osd_message:main"
scc-osd-radial-menu   = "scc.bin.scc_osd_radial_menu:main"
scc-osd-show-bindings = "scc.bin.scc_osd_show_bindings:main"

[tool.setuptools]
packages = [
	"scc",
	"scc.bin",
	"scc.drivers",
	"scc.lib",
	"scc.x11",
	"scc.osd",
	"scc.foreign",
	"scc.gui",
	"scc.gui.ae",
	"scc.gui.importexport",
	"scc.gui.creg"
]

[tool.setuptools_scm]
version_file = "scc/_version.py"

[tool.ruff]
# Target non-EOL releases at minimum, or later if needed
# https://devguide.python.org/versions/
target-version = "py38"
# Project uses 80 sporadically, so just do soft 80 and hard break at 120
line-length = 120

[tool.ruff.lint.flake8-quotes]
# Existing codebase was already mostly doublequoted
inline-quotes = 'double'


[tool.ruff.format]
# Existing codebase was already mostly doublequoted
quote-style = 'double'
indent-style = 'tab'

[tool.ruff.lint]
select = ['ALL']
ignore = [
	'W191',   # We use tabs for indents, disabling this atrocious PEP 8 recommendation
	'D206',   # ^
	'D401',   # non-imperative-mood - Wants docstrings in imperative language but it's really not foolproof, disable
	'ERA001', # Test for commented out code, but it has way too many false positives, so disable
	'FBT001', # boolean-type-hint-positional-argument     - Allow positional booleans in functions, it's not really that much of an issue
	'FBT002', # boolean-default-value-positional-argument - ^
	'FBT003', # boolean-positional-value-in-call          - ^
]
